// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ErrorBoundary renders and logs a caught error 1`] = `
"<ErrorBoundary spy={(function)}>
  <div>
    Oops!
  </div>
</ErrorBoundary>"
`;

exports[`ErrorBoundary renders the child if no error 1`] = `
"<ErrorBoundary spy={(function)}>
  <section>
    <div>
      Content
    </div>
  </section>
</ErrorBoundary>"
`;
